--- a/_data/data.yml
+++ b/_data/data.yml
@@ -3,17 +3,17 @@
 #
 
 sidebar:
-    position: right # position of the sidebar : left or right
+    position: left # position of the sidebar : left or right
     about: True # set to False or comment line if you want to remove the "how to use?" in the sidebar
     education: True # set to False if you want education in main section instead of in sidebar
 
     # Profile information
-    name: Alan Doe
-    tagline: Full Stack Developer
+    name: Syed Mohammad Fahim Abrar
+    tagline: Full Stack GenAI Developer
     avatar: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
-    email: hello@webjeda.com
+    email: mail@fahimabrar.com
     phone: 012 345 6789
     timezone: America/Cancun Timezone
     citizenship:
