--- a/_data/data.yml
+++ b/_data/data.yml
@@ -10,7 +10,7 @@ sidebar:
     # Profile information
     name: Syed Mohammad Fahim Abrar
     tagline: Full Stack GenAI Developer
-    avatar: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
+    avatar: profile.jpeg  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
     email: mail@fahimabrar.com
