--- a/_data/data.yml
+++ b/_data/data.yml
@@ -146,8 +146,17 @@ projects:
     assignments:
       - title: Velocity
         link: "#hook"
-        tagline: "A responsive website template designed to help startups promote, market and sell their products."
-
+        tagline: "MeetSum is an AI-powered assistant that specializes in recording meeting audio, diarizing, and transcribing it using advanced open weight finetuned-LLM served in private data center. It alleviates the need for manual note-taking, allowing participants to stay more focused during discussions. MeetSum enhances meeting efficiency by automatically generating concise, accurate summaries and actionable minutes. This tool seamlessly integrates with any meeting platforms, ensuring a smooth user experience."
+        responsibilities: |
+            - Led GenAI project development, overseeing task management, ensuring timely delivery, and coordinating efforts across the development team.
+            - Developed advanced transcription and summarization features using fine-tuned large language models such as
+              OpenAI’s Whisper and Mistral-7B.
+            - Implemented full-stack development, developing audio recording features with RecordRTC and utilizing Next.js
+              for front-end development to create a seamless user interface that works with any meeting platform.
+            - Integrated Azure Blob Storage for efficient handling and storage of large audio datasets.
+            - Used Llamacpp to serve and query LLM efficiently, successfully serving quantized models to increase GPU
+              memory efficiency while maintaining relevant results.
+            - Optimized scalability and performance through serverless architecture using Runpod and Docker
       - title: DevStudio
         link: "#"
         tagline: "A responsive website template designed to help web developers/designers market their services."
