--- a/_data/data.yml
+++ b/_data/data.yml
@@ -144,7 +144,8 @@ certifications:
 projects:
     title: Projects
     assignments:
-      - title: Velocity
+      - title: MeetSum
+        skills: Python, NextJS, Runpod, Docker, CosmosDB, Llamacpp, Whisperx, Mistral-7b
         link: "#hook"
         tagline: "MeetSum is an AI-powered assistant that specializes in recording meeting audio, diarizing, and transcribing it using advanced open weight finetuned-LLM served in private data center. It alleviates the need for manual note-taking, allowing participants to stay more focused during discussions. MeetSum enhances meeting efficiency by automatically generating concise, accurate summaries and actionable minutes. This tool seamlessly integrates with any meeting platforms, ensuring a smooth user experience."
         responsibilities: |
